--- a/.github/workflows/close-merged-branch.yml
+++ b/.github/workflows/close-merged-branch.yml
@@ -6,8 +6,13 @@ on:
 jobs:
   delete-branch:
     runs-on: ubuntu-latest
+    env:
+      BACKEND_URL: https://fp-core-prod.dp04sa0tdc6pk.us-east-1.cs.amazonlightsail.com
     steps:
-      - name: delete branch
-        uses: SvanBoxel/delete-merged-branch@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Delete branch
+        run: |
+          REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
+          BRANCH_NAME=${{ github.head_ref }}
+          curl -X POST "${BACKEND_URL}/application/branch/delete" \
+          -H "Content-Type: application/json" \
+          -d '{"owner": "'${{ github.repository_owner }}'", "repo": "'$REPO_NAME'", "branch_name": "'$BRANCH_NAME'"}'
